# LLM_council

./: README.md
Backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
Backend/app/: config.py  main.py
Backend/app/api/v1/: debate_routes.py  document_routes.py  identity_routes.py  persona_routes.py
Backend/app/db/: database.py
Backend/app/models/: debate.py  document.py  persona.py  user.py
Backend/app/schemas/: debate_schema.py  document_schema.py  identity_schema.py  persona_schema.py
Backend/app/services/: billing_metering_service.py  debate_service.py  document_service.py  identity_service.py  model_gateway.py  persona_service.py  research_gateway.py  tool_gateway.py
Backend/app/workers/: debate_worker.py  ingestion_worker.py
Backend/tests/integration/: test_debate_routes.py
Backend/tests/unit/: test_debate_service.py  test_persona_service.py
